test/data/golden/fail/old_not_param.sv0
fn f(x: i32) -> i32 requires(old(x + 1) == 0) ensures(true) {
  return x;
}
